# ev/ev-backend/go/model_confirmation_request.go
@@ -1,13 +1,0 @@
-/*
- * EV Backend
- *
- * API version: 0.0.1
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package ev_backend
-
-type ConfirmationRequest struct {
-	AuthCode string `json:"auth_code"`
-
-	State string `json:"state"`
-}
