# ev/ev-backend/go/model_contract_provisioning_request.go
@@ -1,15 +1,7 @@
-/*
- * EV Backend
- *
- * API version: 0.0.1
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
 package ev_backend
 
 type ContractProvisioningRequest struct {
 	EmspId string `json:"emsp_id"`
-
-	RedirectUri string `json:"redirect_uri"`
 
 	AuthorizationDetail *AuthorizationDetail `json:"authorization_detail"`
 }
