# ev/ev-backend/go/model_contract_provisioning_response.go
@@ -1,15 +1,7 @@
-/*
- * EV Backend
- *
- * API version: 0.0.1
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
 package ev_backend
 
 type ContractProvisioningResponse struct {
-	RequestUri string `json:"request_uri"`
+	UserCode string `json:"user_code"`
 
-	ClientId string `json:"client_id"`
-
-	State string `json:"state"`
+	VerificationUri string `json:"verification_uri"`
 }
