# ev/ev-backend/go/model_par_response_body.go
@@ -1,6 +1,0 @@
-package ev_backend
-
-type ParResponseBody struct {
-	RequestUri string `json:"request_uri"`
-	ExpiresIn  int64  `json:"expires_in"`
-}
